[package]
name = "duupli"
version = "0.1.0"
edition = "2024"

[dependencies]
blake3 = "1.5"
sha2 = "0.10"
xxhash-rust = "0.8"
rayon = "1.8"
walkdir = "2.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }